--- a/List_Assignment_Prem_Jadhav_06.06.2021.ipynb
+++ b/List_Assignment_Prem_Jadhav_06.06.2021.ipynb
@@ -298,20 +298,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-04T19:07:50.588506Z",
-     "start_time": "2021-06-04T19:07:50.568278Z"
+     "end_time": "2021-06-06T14:47:16.323271Z",
+     "start_time": "2021-06-06T14:47:16.313969Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[10, 1, 11, 29, 876, 768, 92]\n",
-      "[10, 1, 11, 1, 29, 876, 768, 10, 11, 1, 92, 29, 876]\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-6-cde1b9e245e3>, line 19)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-6-cde1b9e245e3>\"\u001b[1;36m, line \u001b[1;32m19\u001b[0m\n\u001b[1;33m    lst_comp = [[ele for ele in lst] if ele not in lst_comp]\u001b[0m\n\u001b[1;37m                                                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -330,7 +330,12 @@
     "for ele in lst:\n",
     "    if ele not in new_lst:\n",
     "        new_lst.append(ele)\n",
-    "print(new_lst)"
+    "print(new_lst)\n",
+    "\n",
+    "# using list comprehension method\n",
+    "lst_comp = []\n",
+    "lst_comp = [[ele for ele in lst] for i in ]\n",
+    "lst_comp"
    ]
   },
   {
@@ -495,20 +500,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-06T07:34:53.733534Z",
+     "start_time": "2021-06-06T07:34:53.712100Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0, 0], [0, 1, 2, 3], [0, 2, 4, 6], [0, 3, 6, 9]]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Write a Python program to create a 4X4 2D matrix with below elements using loop and list comprehension both.\n",
     "#Output:- [[0,0,0,0],[0,1,2,3],[0,2,4,6],[0,3,6,9]]\n",
-    "\n"
+    "\n",
+    "# initialising input list\n",
+    "# lst = [[0,0,0,0],[0,1,2,3],[0,2,4,6],[0,3,6,9]]\n",
+    "\n",
+    "# using list comprehension\n",
+    "lst1 = [[i*ele for i in range(4)] for ele in range(4)]\n",
+    "lst1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-06T14:17:26.136050Z",
+     "start_time": "2021-06-06T14:17:26.120762Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 0, 0, 0, 1, 2, 3, 0, 2, 4, 6, 0, 3, 6, 9], [0, 0, 0, 0, 0, 1, 2, 3, 0, 2, 4, 6, 0, 3, 6, 9], [0, 0, 0, 0, 0, 1, 2, 3, 0, 2, 4, 6, 0, 3, 6, 9], [0, 0, 0, 0, 0, 1, 2, 3, 0, 2, 4, 6, 0, 3, 6, 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using for loop\n",
+    "# initialising input list\n",
+    "\n",
+    "# Empty list to store values\n",
+    "lst1 = []\n",
+    "lst2 = []\n",
+    "for ele in range(4):\n",
+    "    for i in range(4):\n",
+    "        lst1.append(i*ele)\n",
+    "    lst2.append(lst1)\n",
+    "print (lst2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-06T14:31:11.526882Z",
+     "start_time": "2021-06-06T14:31:11.499163Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[[0, 0, 0, 0, 0, 0],\n",
+       "  [0, 0, 0, 0, 0, 0],\n",
+       "  [0, 0, 0, 0, 0, 0],\n",
+       "  [0, 0, 0, 0, 0, 0]],\n",
+       " [[0, 0, 0, 0, 0, 0],\n",
+       "  [1, 1, 1, 1, 1, 1],\n",
+       "  [2, 2, 2, 2, 2, 2],\n",
+       "  [3, 3, 3, 3, 3, 3]],\n",
+       " [[0, 0, 0, 0, 0, 0],\n",
+       "  [2, 2, 2, 2, 2, 2],\n",
+       "  [4, 4, 4, 4, 4, 4],\n",
+       "  [6, 6, 6, 6, 6, 6]]]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Write a Python program to create a 3X4X6 3D matrix wiith below elements using loop\n",
     "#Output:- \n",
@@ -517,7 +603,9 @@
     "#     [[0,0,0,0,0,0],[1,1,1,1,1,1],[2,2,2,2,2,2],[3,3,3,3,3,3]],\n",
     "#     [[0,0,0,0,0,0],[2,2,2,2,2,2],[4,4,4,4,4,4],[6,6,6,6,6,6]]\n",
     "# ]\n",
-    "\n"
+    "\n",
+    "lst = [[[j*k for i in range(6)] for j in range(4)] for k in range(3)]\n",
+    "lst"
    ]
   },
   {
