--- a/List_Assignment_Prem_Jadhav_06.06.2021.ipynb
+++ b/List_Assignment_Prem_Jadhav_06.06.2021.ipynb
@@ -298,20 +298,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-06T14:47:16.323271Z",
-     "start_time": "2021-06-06T14:47:16.313969Z"
+     "end_time": "2021-06-10T17:27:18.152467Z",
+     "start_time": "2021-06-10T17:27:18.136656Z"
     }
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-cde1b9e245e3>, line 19)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-6-cde1b9e245e3>\"\u001b[1;36m, line \u001b[1;32m19\u001b[0m\n\u001b[1;33m    lst_comp = [[ele for ele in lst] if ele not in lst_comp]\u001b[0m\n\u001b[1;37m                                                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 1, 11, 29, 876, 768, 92]\n",
+      "[10, 1, 11, 29, 876, 768, 92]\n"
      ]
     }
    ],
@@ -334,8 +334,8 @@
     "\n",
     "# using list comprehension method\n",
     "lst_comp = []\n",
-    "lst_comp = [[ele for ele in lst] for i in ]\n",
-    "lst_comp"
+    "lst_comp1 = [lst_comp.append(i) for i in lst if i not in lst_comp]\n",
+    "print (lst_comp)"
    ]
   },
   {
@@ -536,8 +536,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-06T14:17:26.136050Z",
-     "start_time": "2021-06-06T14:17:26.120762Z"
+     "end_time": "2021-06-10T17:29:31.999385Z",
+     "start_time": "2021-06-10T17:29:31.986355Z"
     }
    },
    "outputs": [
@@ -545,7 +545,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 0, 0, 0, 0, 1, 2, 3, 0, 2, 4, 6, 0, 3, 6, 9], [0, 0, 0, 0, 0, 1, 2, 3, 0, 2, 4, 6, 0, 3, 6, 9], [0, 0, 0, 0, 0, 1, 2, 3, 0, 2, 4, 6, 0, 3, 6, 9], [0, 0, 0, 0, 0, 1, 2, 3, 0, 2, 4, 6, 0, 3, 6, 9]]\n"
+      "[[0, 0, 0, 0], [0, 1, 2, 3], [0, 2, 4, 6], [0, 3, 6, 9]]\n"
      ]
     }
    ],
@@ -554,9 +554,9 @@
     "# initialising input list\n",
     "\n",
     "# Empty list to store values\n",
-    "lst1 = []\n",
     "lst2 = []\n",
     "for ele in range(4):\n",
+    "    lst1 = []\n",
     "    for i in range(4):\n",
     "        lst1.append(i*ele)\n",
     "    lst2.append(lst1)\n",
@@ -641,23 +641,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-04T18:30:51.212750Z",
-     "start_time": "2021-06-04T18:30:51.190665Z"
+     "end_time": "2021-06-10T17:33:43.345212Z",
+     "start_time": "2021-06-10T17:33:43.331028Z"
     }
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'random' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-78-c46f0d73d4b9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mlst\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m21\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m22\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m98\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m87\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m45\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m33\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mlst\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'random' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 100, 87, 98, 10, 33, 22, 45, 21, 1]\n"
      ]
     }
    ],
@@ -665,40 +661,15 @@
     "#Write a Python program which takes a list from the user and prints it after reshuffling the elements of the list.\n",
     "#Input:- [10,21,22,98,87,45,33,1,2,100]\n",
     "#Output:- [1,87,21,10,33,2,100,45,98,22] (It may be any randon list but with same elements)\n",
-    "\n"
+    "\n",
+    "# initialising input list\n",
+    "lst = [10,21,22,98,87,45,33,1,2,100]\n",
+    "\n",
+    "# using random library\n",
+    "from random import shuffle\n",
+    "shuffle(lst)\n",
+    "print (lst)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-06-04T18:37:18.607866Z",
-     "start_time": "2021-06-04T18:37:18.593698Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.143"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "round(22/7,3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
